--- a/WearNotifications/wear/src/main/res/layout/view_list_item.xml
+++ b/WearNotifications/wear/src/main/res/layout/view_list_item.xml
@@ -1,4 +1,4 @@
-<com.ptrprograms.androidwearnotifications.WearableListItemLayout
+<com.ptrprograms.androidwearnotifications.views.WearableListItemLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center_vertical"
     android:layout_width="match_parent"
@@ -13,4 +13,4 @@
         android:lineSpacingExtra="-4sp"
         android:textColor="@android:color/black"
         android:textSize="16sp"/>
-</com.ptrprograms.androidwearnotifications.WearableListItemLayout>
+</com.ptrprograms.androidwearnotifications.views.WearableListItemLayout>
