--- a/WearNotifications/wear/src/main/res/layout/view_list_item.xml
+++ b/WearNotifications/wear/src/main/res/layout/view_list_item.xml
@@ -2,15 +2,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center_vertical"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/text"
-        android:gravity="center_vertical|left"
         android:layout_width="wrap_content"
-        android:layout_marginRight="16dp"
         android:layout_height="match_parent"
-        android:fontFamily="sans-serif-condensed-light"
-        android:lineSpacingExtra="-4sp"
-        android:textColor="@android:color/black"
+        android:gravity="center"
         android:textSize="16sp"/>
 </com.ptrprograms.androidwearnotifications.views.WearableListItemLayout>
